Closed
Bug 887357
Opened 12 years ago
Closed 12 years ago
Defect - Metro-enabled Nightly ignores command line flags from icon pinned to the taskbar (but not from the command line itself)
Categories
(Firefox for Metro Graveyard :: General, defect, P1)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: KWierso, Assigned: jimm)
References
Details
(Keywords: regression, Whiteboard: feature=defect c=tbd u=tbd p=1 status=verified)
Attachments
(1 file)
|
1.29 KB,
patch
|
bbondy
:
review+
|
Details | Diff | Splinter Review |
I like to have all channels of Firefox installed to my main computer for testing, so I have a shortcut to Nightly, Aurora, Beta, and Release Firefoxes pinned to my taskbar. To let them all run at the same time, I added "-P -no-remote" to the "Target" line in the shortcut properties for Aurora, Beta and Release, which lets me run each of them with a separate profile.
For my Nightly shortcut, I just add "-P mainprofile" to the Target field, which forces Nightly to use my "mainprofile" profile every time I start it from the shortcut, regardless of what the other channels of Firefox are using.
This all worked fine until the Firefox for Metro stuff was merged into Nightly. After that merge, all of the extra things I add to the Target line appear to be ignored. ("-P" on its own doesn't bring up the profile manager, "-P someprofile" doesn't use that profile, "-no-remote" doesn't do anything.) When launched, Nightly will use whatever the most recently-used profile happened to be.
All of those command line arguments still work just fine from the command prompt, they just don't work from the taskbar icons.
Bbondy guesses this is CEH-related?
Updated•12 years ago
|
Summary: Metro-enabled Nightly ignores command line flags from icon pinned to the taskbar (but not from the command line itself) → Defect - Metro-enabled Nightly ignores command line flags from icon pinned to the taskbar (but not from the command line itself)
Whiteboard: feature=defect c=tbd u=tbd p=0
| Assignee | ||
Comment 1•12 years ago
|
||
From a bit of debugging, this only seem to afflict shortcuts that have been edited after having been pinned. (using right-click shortcut, right-click 'firefox' in the jump list.)
| Assignee | ||
Comment 3•12 years ago
|
||
Confirming this seems to be a CEH parameter handling problem:
SetParameters: '-testtest'
SetSelection param count: 1
SetSelection param: 'T:\Mozilla\MC-REL\dist\bin\firefox.exe'
No data object or data object has no text.
SetSelection target: T:\Mozilla\MC-REL\dist\bin\firefox.exe
Initialize(open)
IExecuteCommandApplicationHostEnvironment::GetValue()
GetUIMode: 0
QueryAppIsDefaultAll: 1
QueryCurrentDefault: 0
registeredApp=FirefoxURL
returning AHE_DESKTOP
Execute()
Desktop Launch: verb:open exe:T:\Mozilla\MC-REL\dist\bin\firefox.exe params:
| Assignee | ||
Comment 4•12 years ago
|
||
Assignee: nobody → jmathies
| Assignee | ||
Comment 5•12 years ago
|
||
Comment on attachment 767888 [details] [diff] [review]
fix
Seems to do the trick. I don't think we need to quote the params, we can just hand whatever we get on over.
Attachment #767888 -
Flags: review?(netzen)
Updated•12 years ago
|
Status: NEW → ASSIGNED
QA Contact: jbecerra
Whiteboard: feature=defect c=tbd u=tbd p=0 → feature=defect c=tbd u=tbd p=1
Updated•12 years ago
|
Priority: -- → P1
Updated•12 years ago
|
Attachment #767888 -
Flags: review?(netzen) → review+
| Assignee | ||
Comment 6•12 years ago
|
||
Comment 7•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 8•12 years ago
|
||
Working for me now on the June 28 Nightly build.
Status: RESOLVED → VERIFIED
Comment 10•12 years ago
|
||
Tested on 2013-07-17 using latest nightly.
I tested opening the Nightly and release versions using the command line arguments added to the pinned shortcuts in the task bar, and all those launched the Nightly or the release version as expected in comment #0.
Whiteboard: feature=defect c=tbd u=tbd p=1 → feature=defect c=tbd u=tbd p=1 status=verified
Comment 11•12 years ago
|
||
User Agent: Mozilla/5.0 (Windows NT 6.2; Win64; x64; rv:26.0) Gecko/20100101 Firefox/26.0
Build ID: 20130807030216
Built from http://hg.mozilla.org/mozilla-central/rev/1fb5d14e8348
WFM
Tested on windows 8 using latest nightly for iteration-11.
I tested opening the Nightly and release versions using the command line arguments added to the pinned shortcuts in the task bar, and all those launched the Nightly or the release version as expected in comment #0.
Comment 12•12 years ago
|
||
User Agent: Mozilla/5.0 (Windows NT 6.2; WOW64; rv:26.0) Gecko/20100101 Firefox/26.0
Build ID: 20130826074752
Built from http://hg.mozilla.org/mozilla-central/rev/14b1e8c2957e
WFM
Tested on windows 8 using latest nightly for iteration-12. Followed steps provided in user story and got expected result.
Comment 13•12 years ago
|
||
I tested opening the Nightly and release versions using the command line arguments added to the pinned shortcuts in the task bar, and all those launched the Nightly or the release version as expected in comment #0.
You need to log in
before you can comment on or make changes to this bug.
Description
•