Bug 887357 - Fix: Nightly ignores command line flags in pinned taskbar shortcuts. r=bbondy